Ajout prototype carte

--- a/character_pour_le_projet_stage_de_2nd/character_pour_le_projet_stage_de_2nd.csproj
+++ b/character_pour_le_projet_stage_de_2nd/character_pour_le_projet_stage_de_2nd.csproj
@@ -51,6 +51,8 @@
     <Compile Include="classe\IHero.cs" />
     <Compile Include="classe\IMonstre.cs" />
     <Compile Include="classe\Mage.cs" />
+    <Compile Include="classe\IMap.cs" />
+    <Compile Include="classe\Map.cs" />
     <Compile Include="classe\Monstre.cs" />
     <Compile Include="classe\Prêtre.cs" />
     <Compile Include="classe\Roublard.cs" />
