Ajout de Plein de truc sur la derniere journée du stage de seconde

--- a/character_pour_le_projet_stage_de_2nd/character_pour_le_projet_stage_de_2nd.csproj
+++ b/character_pour_le_projet_stage_de_2nd/character_pour_le_projet_stage_de_2nd.csproj
@@ -53,6 +53,7 @@
     <Compile Include="classe\ICharacter.cs" />
     <Compile Include="classe\IHero.cs" />
     <Compile Include="classe\IMonstre.cs" />
+    <Compile Include="classe\Inventaire.cs" />
     <Compile Include="classe\Item.cs" />
     <Compile Include="classe\Mage.cs" />
     <Compile Include="classe\IMap.cs" />
